# hallon

./: .gitignore  Cargo.toml  README.md
models/: rabbit.mtl  tree.mtl
src/: camera.rs  display_device.rs  main.rs  math.rs  object.rs  rasterizer.rs  render_target.rs
src/geometry/: mod.rs
src/loaders/: mod.rs  mtl.rs  obj.rs
src/renderer/: mod.rs
src/shaders/: mod.rs
