[package]
name = "hallon"
version = "0.1.0"
authors = ["Nils Ceberg <nils.ceberg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"    # Random number generators and other randomness functionality.
term_size = "0.3.1"
failure = "0.1.7"
ctrlc = "3.1.4"

